fix text on small screens

--- a/client/src/Pages/Landing page/components/hero.module.css
+++ b/client/src/Pages/Landing page/components/hero.module.css
@@ -59,9 +59,11 @@
 .content_button button {
    display: block;
    width: 60%;
-   padding: 1% 5% 1% 5%;
+   height: 2.5rem;
+   padding: 10px;
    font-weight: 500;
    color: var(--white);
+   text-align: center;
    background-color: var(--lightcol);
    border: none;
    border-radius: 4px;
@@ -156,7 +158,7 @@
       width: 80%;
       height: max-content;
       right: 40px;
-      top: 200px;
+      top: 100px;
    }
 
    .content_title h1 {
@@ -179,6 +181,14 @@
 }
 
 @media (min-width: 600px) {
+   .hero_content {
+      position: absolute;
+      color: var(--gray);
+      width: 80%;
+      height: max-content;
+      right: 40px;
+      top: 200px;
+   }
 }
 
 @media (min-width: 960px) {
@@ -186,13 +196,17 @@
       padding-top: 2rem;
       width: 50%;
       float: right;
-      /* height: 100vh; */
       padding-right: 20px;
    }
 
    .hero_image img {
       width: 100%;
       overflow: hidden;
+   }
+   .hero_content {
+      color: var(--midcol);
+      position: initial;
+      width: 50%;
    }
 
    .content_info p {
